--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <link rel=stylesheet href=css/style.css>
   </head>
   <body>
-    <section class="viewport" role=region>
+    <section class=viewport role=region>
       <h1>List Bare</h1>
-      <figure class="code mb+">
+      <figure class="code u-mb+">
         <code>
           &lt;ol class=list-bare&gt;
           <br>
