Added grunt-htmlbuild comments

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,4 @@
+<!-- build:remove -->
 <!DOCTYPE html>
 <html lang=en>
   <head>
@@ -7,6 +8,7 @@
   </head>
   <body>
     <section class=viewport role=region>
+      <!-- /build -->
       <h1>List Bare</h1>
       <figure class="code u-mb+">
         <code>
@@ -25,6 +27,8 @@
         <li>List Item Five</li>
         <li>List Item Six</li>
       </ol>
+    <!-- build:remove -->
     </section>
   </body>
 </html>
+<!-- /build -->
