--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,17 @@
     <section class=viewport role=region>
       <!-- /build -->
       <h1>List Bare</h1>
-      <figure class="code u-mb+">
+      <div class="flex flex--justify flex--wrap flex--baseline">
+        <p>
+          To use this module, follow the instructions in the
+          <a href=https://github.build.ge.com/PXd/px-list-bare-design>README</a>.
+        </p>
+        <a class=btn href=https://github.build.ge.com/PXd/px-list-bare-design>
+          <i class="fa fa-github u-mr--"></i>
+          px-list-bare-design
+        </a>
+      </div>
+      <figure class="code u-mv+">
         <code>
           &lt;ol class=list-bare&gt;
           <br>
