Added more docs to demo

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,13 @@
         <p>
           To use this module, follow the instructions in the
           <a href=https://github.build.ge.com/PXd/px-list-bare-design>README</a>.
+          <!-- build:remove -->
+          (For background on PXd, read the
+          <a href=https://github.build.ge.com/PXd/px-getting-started>Getting Started</a>
+          documentation.)
+          <!-- /build -->
         </p>
-        <a class=btn href=https://github.build.ge.com/PXd/px-list-bare-design>
+        <a class="btn btn--primary" href=https://github.build.ge.com/PXd/px-list-bare-design>
           <i class="fa fa-github u-mr--"></i>
           px-list-bare-design
         </a>
