Added missing How to Use

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,20 @@
           px-list-bare-design
         </a>
       </div>
+      <h2>How to Use</h2>
+      <p>Install via command line:</p>
+      <figure class="code u-mb+">
+        <code>
+          bower install --save https://github.build.ge.com/PXd/px-list-bare-design.git
+        </code>
+      </figure>
+      <p>Add to component Sass file:</p>
+      <figure class="code u-mb++">
+        <code>
+          @import "px-list-bare-design/_objects.list-bare.scss";
+        </code>
+      </figure>
+      <h3>HTML</h3>
       <figure class="code u-mv+">
         <code>
           &lt;ol class=list-bare&gt;
