--- a/demo/px-list-bare-design-demo.html
+++ b/demo/px-list-bare-design-demo.html
@@ -6,7 +6,7 @@
 <link rel="import" href="../css/px-list-bare-design-demo-styles.html" />
 
 <!-- Demo DOM module -->
-<dom-module id="local-element-demo">
+<dom-module id="px-list-bare-design-demo">
   <template>
     <!-- 0: Import the styles-->
     <style include="px-list-bare-design-demo-styles" is="custom-style"></style>
@@ -60,7 +60,7 @@
 <!-- 6: Handle selectedOptions, update demo -->
 <script>
   Polymer({
-    is: 'local-element-demo',
+    is: 'px-list-bare-design-demo',
 
     attached : function(){
       this.async(function() {
