--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         async
         id="main-element-import"
         rel="import"
-        href="demo/index.html">
+        href="demo/px-list-bare-design-demo.html">
 
     <!--
       Load the app icon and manifest for Android devices.
@@ -78,22 +78,7 @@
 
   <body>
     <!-- Elements wait on the page and are upgraded after demo/index.html is loaded. -->
-    <local-element-demo></local-element-demo>
+    <px-list-bare-design-demo></px-list-bare-design-demo>
 
-    <!--
-      Attempt to register a service worker with the correct scope. Fail quietly
-      if this doesn't work, but log the result to the console.
-    -->
-    <script type="text/javascript">
-      // if ('serviceWorker' in navigator) {
-      //   navigator.serviceWorker.register('service-worker.js').then(function(registration) {
-      //     // Registration was successful
-      //     console.log('ServiceWorker registration successful with scope: ', registration.scope);
-      //   }).catch(function(err) {
-      //     // registration failed :(
-      //     console.log('ServiceWorker registration failed: ', err);
-      //   });
-      // }
-    </script>
   </body>
 </html>
