Upgrade to Polymer 2.x

--- a/demo/px-list-bare-design-demo.html
+++ b/demo/px-list-bare-design-demo.html
@@ -26,7 +26,7 @@
 <!-- N/A -->
 
 <!-- 3: Make HTML Demo -->
-<section data-slot="demoHTML">
+<section slot="demo-html">
 
 <ul class="list-bare">
   <li>List Item</li>
@@ -37,12 +37,12 @@
 </section>
 
 <!-- 4: Set Import Slot -->
-<section data-slot="import">
+<section slot="import">
 @import "px-list-bare-design/_objects.list-bare.scss";
 </section>
 
 
-<section data-slot="usage">
+<section slot="usage">
 ```
 <ul class="list-bare">
   <li>List Item</li>
